[bumpversion]
current_version = 1.11.0
files = setup.py conda-recipe/meta.yaml imcut/__init__.py
commit = True
tag = True
tag_name = {new_version}

[nosetests]
attr = !interactive,!slow,!LAR

[metadata]
description-file = README.md

[tool:pytest]
addopts = -m "not interactive and not slow"
markers = 
	interactive: marks interactive tests
	slow: marks slow tests

